lab1/Test/L1-A-7-93.output
Error Type A at Line 7
Error Type A at Line 12
Error Type A at Line 28
Error Type A at Line 31
Error Type A at Line 35
