lab1/Test/L1-A-7-93.cmm
int XBWOPnvStKRNwT3 ( int k2FhgEMcziH ) {
  struct SiixqD0WVBU3 {
    int oXRR5HUzrIE ;
    struct {
      int Br6Ty2R ;
    }H9k0RW5VPXRO_f8VnY2 ;
$  }NJv62cYaGWP = KVbkYEQlJ3DUMH , STr6leik [ 689318294 
    ] ;
  return qjdL_6tpf5d || rSOZjNrE < GYq9c9HdRb + ! 
    yOd6W7dFkRiJ ( sN_ , TAbeiBdSh = KOYj_TesCzPM3OtvA1q 
    && ZQ3CBs <= lt6uC4M4eeCXATBXm - BOR9hft4 / ! - - 
    zCX41Py $[ Ly_2Ahoh0GpcfMl5 = kmoCkCxsDoSls == ndo2 
    / ( elfcB2mICt > TjO1Mvup3B3FSo6vu6wc - Lba5Cx8Qq0SlVSjFZBNE 
    / y8c0Q ( DiG8RYHHBWLye4h9tl_c >= SrvpEXmHOEdpCwRy53 
    - T7XVJbFBbJ * ! iV5sSP8eExgVB7YLvbNU [ NEaBGgLlWnYNB 
    || mptU5dyA [ TgQ || cx5fB != CnFawg ] / r_ABf7Urd8vIPI9 
    ] - 973906943 ) / L8Imj1r3Ys_Ul ) . WKBGQBDdE0mc7qIIcE 
    . KcGx ] ) / - ! 888560125.1053265529 . K * RwZJ1uc65K 
    ( ) ;
}
float lbZe3Lu4PrsnJbt 
;
int ;
struct pIBJ8pZ p8y ( ) {
}
int ;
int ;
int %Tt ( int eCP , int r247 ) {
}
int pyttOaqs0fM5ltei ( ) {
'}
int lVr3po3GAaM_XmvmB ( ) {
}
int ;
:int d1nhPhVazOK , Ns3 

;
int XIfp82GezPsL7r4h ( ) {
  XljARjt ;
  DdIObMwh_bc ;
  if ( PfHggiOxSvVdpSu9T )   if ( TwwN )   Q1ijrj 
    ;
else   TnxFhQjnMRV55bCe ;

else   if ( GfIui51KZiTOkVfPo4 )   while ( oeIiEbKTWUlDx7gBb 
    ) {
  }


}
int ;
